--- a/index.html
+++ b/index.html
@@ -53,14 +53,7 @@
                     </span>
                 </li>
                 <!--etherscan-->
-                <li>
-
-
-
-
-                </li>
             </ul>
-
         </div>
     </nav>
     <!-- <nav class="navbar navbar-expand-lg navbar-scroll">
@@ -79,9 +72,9 @@
       </nav> -->
 
     <div class="container-fluid text-center">
+        <div>Base CA: 0x8ab2fd79a9038a341e1fa665cafc66270dccba08</div>
         <div class="hero">
             <div class="row">
-
                 <div class="im">
                     <img src="img/hero.webp" class="img-fluid">
                     <div id="eye">
