--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="col-md-9">
 
                 <div class="im">
-                    <img src="img/vctr/hero2.svg" class="img-fluid">
+                    <img src="img/vctr/prumpt.png" class="img-fluid">
                     <div id="eye">
                         <div id="eyeBall"></div>
                     </div>
