--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <div class="container-fluid">
         <div class="row hero-section">
-            <div class="col-md-3">
+            <div class="col-lg-3">
                 <p class="hero-text-main"><span class="fancy">THE SHIT COIN OF SHIT COINS</span></p>
                 <p><span class="hero-subtext">a shit coin like never before seen on BASE..</span></p>
                 <br>
@@ -48,7 +48,7 @@
                     </svg>CA:<span id="ca">0x8ab2fd79a9038a341e1fa665cafc66270dccba08 </span></button>
             </div>
 
-            <div class="col-md-9">
+            <div class="col-lg-9">
 
                 <div class="im">
                     <img src="img/vctr/prumpt.png" class="img-fluid">
@@ -58,7 +58,6 @@
                     <div id="eye2">
                         <div id="eyeBall2"></div>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -89,11 +88,27 @@
                     <br>
                     <p><strong>Supply:</strong> 1.776 Billion</p>
 
-                    <p></p><strong>LP:</strong> Locked</p>
+                    <p><strong>LP:</strong> Locked</p>
 
                     <p><strong>Contract Renounced</strong></p>
 
                     <p>The PTCI10 smart contract has 0 tax on all buys and sells.</p>
+
+
+                    <p><strong>Top Holders</strong>
+                        <br>
+                        Vitalik Buterin
+                        <br>
+                        Brian Armstrong
+                    </p>
+
+                    <p><strong>Burn Events</strong>
+                        <br>
+                        We burned 63.2697% of supply. Token top holder is: <br>
+                        <a href="https://basescan.org/token/0x8ab2fd79a9038a341e1fa665cafc66270dccba08#balances">0x000000000000000000000000000000000000dead</a>
+                        
+                        
+                    </p>
 
                 </div>
             </div>
@@ -136,8 +151,10 @@
             </div>
 
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-                <li class="ms-3"><a class="text-muted" href="https://twitter.com/ptci10"><i class="bi bi-twitter"></i></a></li>
-                <li class="ms-3"><a class="text-muted" href="https://t.me/PTCI10"><i class="bi bi-telegram"></i></a></li>
+                <li class="ms-3"><a class="text-muted" href="https://twitter.com/ptci10"><i
+                            class="bi bi-twitter"></i></a></li>
+                <li class="ms-3"><a class="text-muted" href="https://t.me/PTCI10"><i class="bi bi-telegram"></i></a>
+                </li>
             </ul>
         </footer>
 </body>
