--- a/index.html
+++ b/index.html
@@ -41,11 +41,14 @@
                 <p class="hero-text-main"><span class="fancy">THE SHIT COIN OF SHIT COINS</span></p>
                 <p><span class="hero-subtext">a shit coin like never before seen on BASE..</span></p>
                 <br>
-                <button class="btn-ca" onclick="copyToClipboard()"><svg xmlns="http://www.w3.org/2000/svg" width="16"
+                <!-- needs to be https for it to work -->
+                <!-- <button class="btn-ca" onclick="copyToClipboard()"><svg xmlns="http://www.w3.org/2000/svg" width="16"
                         height="16" fill="currentColor" class="bi bi-copy" viewBox="0 0 16 16">
                         <path fill-rule="evenodd"
                             d="M4 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 5a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1h1v1a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h1v1z" />
-                    </svg>CA:<span id="ca">0x8ab2fd79a9038a341e1fa665cafc66270dccba08 </span></button>
+                    </svg>CA:<span id="ca">0x8ab2fd79a9038a341e1fa665cafc66270dccba08 </span></button> -->
+
+                    <span class="hero-subtext">CA:0x8ab2fd79a9038a341e1fa665cafc66270dccba08 </span>
             </div>
 
             <div class="col-lg-9">
