--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <!-- fade in bs -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+
     <link href="css/main.css" rel="stylesheet">
     <link href="css/circles.css" rel="stylesheet">
     <link href="css/navbar.css" rel="stylesheet">
     <title>PepeTrumpCoinbaseInu10 BASE - TICKER $TRUMP</title>
-
 </head>
 
 <body>
@@ -79,7 +82,10 @@
             </div>
 
             <div class="col-lg-3">
-                <p class="hero-text-main"><span>THE SHIT COIN OF SHIT COINS</span></p>
+                <p class="hero-text-main item-group">
+                    <span>THE SHIT COIN OF SHIT COINS</span>
+                </p>
+
                 <!-- <p><span class="hero-subtext">a shit coin like never before seen on BASE..</span></p> -->
                 <br>
                 <!-- needs to be https for it to work -->
@@ -109,6 +115,7 @@
 
         <div class="section" id="about">
             <div class="row">
+
                 <div class="offset-md-3 col-md-6 offset-md-3">
                     <h1>About PepeTrumpCoinbaseInu10</h1>
                     <br>
@@ -122,6 +129,12 @@
 
                         <br>
                         white paper <a href="doc/whitepaper.txt">here</a>.
+                </div>
+                <div class="col-md-12">
+                    <div class="" data-aos="zoom-in-right" data-aos-offset="300"> 
+                        <img src="img/rocket.png"class="img-fluid rocket">
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -137,7 +150,7 @@
 
                     <p><strong>Contract Renounced</strong></p>
 
-                    <p>The PTCI10 smart contract has 0 tax on all buys and sells.</p>
+                    <p>The PTCI10 smart contract has 0 tax on all buys and sells. Taxation is theft.</p>
 
 
                     <p><strong>Top Holders</strong>
@@ -152,7 +165,6 @@
                         We burned 63.2697% of supply. Token top holder is: <br>
                         <a
                             href="https://basescan.org/token/0x8ab2fd79a9038a341e1fa665cafc66270dccba08#balances">0x000000000000000000000000000000000000dead</a>
-
 
                     </p>
 
@@ -198,11 +210,16 @@
 
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
                 <li class="ms-3"><a class="text-muted" href="https://twitter.com/ptci10"><i
-                            class="bi bi-twitter"></i></a></li>
+                            class="bi bi-twitter"></i></a>
+                </li>
                 <li class="ms-3"><a class="text-muted" href="https://t.me/PTCI10"><i class="bi bi-telegram"></i></a>
                 </li>
             </ul>
         </footer>
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
 </body>
 <script src="js/main.js"></script>
 
