memes section, fix eyes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- fade in bs -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
-
+    <!-- custom -->
     <link href="css/main.css" rel="stylesheet">
     <link href="css/circles.css" rel="stylesheet">
     <link href="css/navbar.css" rel="stylesheet">
@@ -101,7 +101,8 @@
             <div class="col-lg-9">
 
                 <div class="im">
-                    <img src="img/vctr/prumpt2.png" class="img-fluid">
+
+                    <img id="hero" src="img/hero.png" class="img-fluid">
                     <div id="eye">
                         <div id="eyeBall"></div>
                     </div>
@@ -131,8 +132,8 @@
                         white paper <a href="doc/whitepaper.txt">here</a>.
                 </div>
                 <div class="col-md-12">
-                    <div class="" data-aos="zoom-in-right" data-aos-offset="300"> 
-                        <img src="img/rocket.png"class="img-fluid rocket">
+                    <div class="" data-aos="zoom-in-right" data-aos-offset="300">
+                        <img src="img/rocket.png" class="img-fluid rocket">
                     </div>
 
                 </div>
@@ -195,6 +196,14 @@
                          clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
+            </div>
+        </div>
+
+        <div class="section">
+            <div class="row">
+                <div class="col-md-12" id="memes">
+                    <h1>Memes</h1>
+                    <br>
             </div>
         </div>
 
