--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="icon" type="image/x-icon" href="http://www.ptci10.wtf/logo/logo_32_32.png">
+    <link rel="icon" type="image/x-icon" href="https://www.ptci10.wtf/logo/logo_32_32.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -204,6 +204,7 @@
                 <div class="col-md-12" id="memes">
                     <h1>Memes</h1>
                     <br>
+                    <img src="img/memes/21.gif" class="img-fluid meme" data-aos="fade-in">
             </div>
         </div>
 
