made hero smaller

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                         <a class="nav-link" href="#chart">Chart</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#meme-section">Memes</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="doc/whitepaper.txt">Whitepaper</a>
                     </li>
                 </ul>
@@ -199,7 +202,7 @@
             </div>
         </div>
 
-        <div class="section">
+        <div class="section" id="meme-section">
             <div class="row">
                 <div class="col-md-12" id="memes">
                     <h1>Memes</h1>
