--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
                         height="16" fill="currentColor" class="bi bi-copy" viewBox="0 0 16 16">
                         <path fill-rule="evenodd"
                             d="M4 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 5a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1h1v1a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h1v1z" />
-                    </svg>CA:<span id="ca">0x8ab2fd79a9038a341e1fa665cafc66270dccba08 </span></button> -->
+                    </svg>CA:<span id="ca">0xbad9fe77af896d4ec86e4e1c36df9064d061e564 </span></button> -->
 
-                <span class="hero-subtext">CA:0x8ab2fd79a9038a341e1fa665cafc66270dccba08 </span>
+                <span class="hero-subtext">CA:0xbad9fe77af896d4ec86e4e1c36df9064d061e564 </span>
             </div>
 
             <div class="col-lg-9">
@@ -148,30 +148,14 @@
                 <div class="col">
                     <h1>Tokenomics</h1>
                     <br>
-                    <p><strong>Supply:</strong> 1.776 Billion</p>
-
-                    <p><strong>LP:</strong> Locked</p>
+                    <p><strong>Supply:</strong> 1 Billion</p>
 
                     <p><strong>Contract Renounced</strong></p>
 
                     <p>The PTCI10 smart contract has 0 tax on all buys and sells. Taxation is theft.</p>
 
-
-                    <p><strong>Top Holders</strong>
-                        <br>
-                        Vitalik Buterin
-                        <br>
-                        Brian Armstrong
-                    </p>
-
-                    <p><strong>Burn Events</strong>
-                        <br>
-                        We burned 63.2697% of supply. Token top holder is: <br>
-                        <a
-                            href="https://basescan.org/token/0x8ab2fd79a9038a341e1fa665cafc66270dccba08#balances">0x000000000000000000000000000000000000dead</a>
-
-                    </p>
-
+                    <p>Fair Launch on https://ape.store/</p>
+                    
                 </div>
             </div>
         </div>
@@ -184,7 +168,7 @@
                     <br>
                     <div id="dexscreener-embed">
                         <iframe
-                            src="https://dexscreener.com/base/0x66063550311bF103b28dCFa6F02933Fdec034ea3?embed=1&trades=0&info=0"></iframe>
+                            src="https://dexscreener.com/base/0xbad9fe77af896d4ec86e4e1c36df9064d061e564?embed=1&trades=0&info=0"></iframe>
                     </div>
                 </div>
             </div>
