--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
                     <p>The PTCI10 smart contract has 0 tax on all buys and sells. Taxation is theft.</p>
 
-                    <p>Fair Launch on https://ape.store/</p>
+                    <p>Fair Launch on <a href="https://ape.store/base/0xbad9fe77af896d4ec86e4e1c36df9064d061e564"> ape.store </a></p>
                     
                 </div>
             </div>
